fix call api post
